; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_cleanup_deleted_stores_by_type.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_repo-mgr.c_cleanup_deleted_stores_by_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@seaf = common dso_local global %struct.TYPE_5__* null, align 8
@.str = private unnamed_addr constant [14 x i8] c"deleted_store\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"Failed to open store dir %s: %s.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @cleanup_deleted_stores_by_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup_deleted_stores_by_type(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** @seaf, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i8*, i8** %2, align 8
  %12 = call i8* @g_build_filename(i32 %10, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* %11, i32* null)
  store i8* %12, i8** %3, align 8
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %5, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i32* @g_dir_open(i8* %13, i32 0, %struct.TYPE_4__** %5)
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %25, label %17

17:                                               ; preds = %1
  %18 = load i8*, i8** %3, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @seaf_warning(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i8* %18, i32 %21)
  %23 = load i8*, i8** %3, align 8
  %24 = call i32 @g_free(i8* %23)
  br label %39

25:                                               ; preds = %1
  store i32 0, i32* %7, align 4
  br label %26

26:                                               ; preds = %30, %25
  %27 = load i32*, i32** %6, align 8
  %28 = call i8* @g_dir_read_name(i32* %27)
  store i8* %28, i8** %4, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %30, label %34

30:                                               ; preds = %26
  %31 = load i8*, i8** %3, align 8
  %32 = load i8*, i8** %4, align 8
  %33 = call i32 @remove_store(i8* %31, i8* %32, i32* %7)
  br label %26

34:                                               ; preds = %26
  %35 = load i8*, i8** %3, align 8
  %36 = call i32 @g_free(i8* %35)
  %37 = load i32*, i32** %6, align 8
  %38 = call i32 @g_dir_close(i32* %37)
  br label %39

39:                                               ; preds = %34, %17
  ret void
}

declare dso_local i8* @g_build_filename(i32, i8*, i8*, i32*) #1

declare dso_local i32* @g_dir_open(i8*, i32, %struct.TYPE_4__**) #1

declare dso_local i32 @seaf_warning(i8*, i8*, i32) #1

declare dso_local i32 @g_free(i8*) #1

declare dso_local i8* @g_dir_read_name(i32*) #1

declare dso_local i32 @remove_store(i8*, i8*, i32*) #1

declare dso_local i32 @g_dir_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
